// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.metadata;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.securecomputation.metadata";
option java_multiple_files = true;
option java_outer_classname = "MetadataActionProto";

// Enum for ActionerType
enum ActionerType {
  DATA_WATCHER = 0;
  REQUISITION_FETCHER = 1;
  TEESDK = 2;
}

// Enum for State
enum State {
  FETCHED = 0;
  STORED = 1;
  QUEUED = 2;
  PROCESSING = 3;
  PROCESSED = 4;
  DELETED = 5;
}

message MetadataAction {
  fixed64 action_id = 1;
  string data_provider_name = 2;
  ActionerType actioner_type = 3;
  fixed64 resource_name = 4;
  State prior_state = 5;
  State new_state = 6;
  google.protobuf.Timestamp action_time = 7;
  google.protobuf.Timestamp create_time = 8;
}
