// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.metadata;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/securecomputation/metadata/metadata_action.proto";

option java_package = "org.wfanet.measurement.securecomputation.metadata";
option java_multiple_files = true;
option java_outer_classname = "RequisitionMetadataProto";


message RequisitionMetadata {
  fixed64 external_data_provider_id = 1;
  fixed64 external_requisition_id = 2;
  string storage_location = 3;
  State state = 4;
  google.protobuf.Timestamp create_time = 5;
}
